// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conjugation can be parsed: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Class",
          "children": [
            {
              "$type": "FeatureMembership",
              "element": {
                "$type": "Feature",
                "children": [],
                "declaredName": "Input",
                "direction": "in",
                "heritage": [],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
          ],
          "declaredName": "Original",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Class",
          "children": [],
          "declaredName": "Conjugate1",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Class",
          "children": [],
          "declaredName": "Conjugate2",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Conjugation",
          "declaredName": "c1",
          "elements": [],
          "reference": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "children": [
                    {
                      "$type": "FeatureMembership",
                      "element": {
                        "$type": "Feature",
                        "children": [],
                        "declaredName": "Input",
                        "direction": "in",
                        "heritage": [],
                        "isNonunique": false,
                        "isOrdered": false,
                        "isSufficient": false,
                        "prefixes": [],
                        "typeRelationships": [],
                      },
                      "elements": [],
                    },
                  ],
                  "declaredName": "Original",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
          "source": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "children": [],
                  "declaredName": "Conjugate1",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Conjugation",
          "declaredName": "c2",
          "elements": [
            {
              "$type": "Annotation",
              "element": {
                "$type": "Documentation",
                "about": [],
                "body": "/* same as c1 */",
              },
              "elements": [],
            },
          ],
          "reference": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "children": [
                    {
                      "$type": "FeatureMembership",
                      "element": {
                        "$type": "Feature",
                        "children": [],
                        "declaredName": "Input",
                        "direction": "in",
                        "heritage": [],
                        "isNonunique": false,
                        "isOrdered": false,
                        "isSufficient": false,
                        "prefixes": [],
                        "typeRelationships": [],
                      },
                      "elements": [],
                    },
                  ],
                  "declaredName": "Original",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
          "source": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "children": [],
                  "declaredName": "Conjugate2",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`conjugation may be omitted without identifiers with '~': toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Class",
          "children": [
            {
              "$type": "FeatureMembership",
              "element": {
                "$type": "Feature",
                "children": [],
                "declaredName": "Input",
                "direction": "in",
                "heritage": [],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
          ],
          "declaredName": "Original",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Class",
          "children": [],
          "declaredName": "Conjugate1",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Class",
          "children": [],
          "declaredName": "Conjugate2",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Conjugation",
          "elements": [],
          "reference": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "children": [
                    {
                      "$type": "FeatureMembership",
                      "element": {
                        "$type": "Feature",
                        "children": [],
                        "declaredName": "Input",
                        "direction": "in",
                        "heritage": [],
                        "isNonunique": false,
                        "isOrdered": false,
                        "isSufficient": false,
                        "prefixes": [],
                        "typeRelationships": [],
                      },
                      "elements": [],
                    },
                  ],
                  "declaredName": "Original",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
          "source": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "children": [],
                  "declaredName": "Conjugate1",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`conjugation may be omitted without identifiers with 'conjugates': toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Class",
          "children": [
            {
              "$type": "FeatureMembership",
              "element": {
                "$type": "Feature",
                "children": [],
                "declaredName": "Input",
                "direction": "in",
                "heritage": [],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
              "elements": [],
            },
          ],
          "declaredName": "Original",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Class",
          "children": [],
          "declaredName": "Conjugate1",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Class",
          "children": [],
          "declaredName": "Conjugate2",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Conjugation",
          "elements": [],
          "reference": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "children": [
                    {
                      "$type": "FeatureMembership",
                      "element": {
                        "$type": "Feature",
                        "children": [],
                        "declaredName": "Input",
                        "direction": "in",
                        "heritage": [],
                        "isNonunique": false,
                        "isOrdered": false,
                        "isSufficient": false,
                        "prefixes": [],
                        "typeRelationships": [],
                      },
                      "elements": [],
                    },
                  ],
                  "declaredName": "Original",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
          "source": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "children": [],
                  "declaredName": "Conjugate1",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`type can declare owned conjugations with '~': toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Class",
          "children": [],
          "declaredName": "Original",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Class",
          "children": [],
          "declaredName": "Conjugate1",
          "heritage": [
            {
              "$type": "Conjugation",
              "elements": [],
              "reference": {
                "$type": "ClassifierReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "Original",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
          ],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`type can declare owned conjugations with 'conjugates': toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Class",
          "children": [],
          "declaredName": "Original",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Class",
          "children": [],
          "declaredName": "Conjugate1",
          "heritage": [
            {
              "$type": "Conjugation",
              "elements": [],
              "reference": {
                "$type": "ClassifierReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "Original",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
          ],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;
